Fix JS; add Burichan style

--- a/src/lib/ololord_static_css.qrc
+++ b/src/lib/ololord_static_css.qrc
@@ -3,5 +3,6 @@
         <file>static/css/photon.css</file>
         <file>static/css/futaba.css</file>
         <file>static/css/neutron.css</file>
+        <file>static/css/burichan.css</file>
     </qresource>
 </RCC>
