--- a/src/lib/static/css/burichan.css
+++ b/src/lib/static/css/burichan.css
@@ -484,7 +484,7 @@ span.newPostCount {
 }
 
 .selectedPost {
-    background-color: #000;
+    background-color: #B0B0FF;
 }
 
 .omittedPosts.hiddenPosts {
