--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -546,6 +546,10 @@ span.newPostCount {
     background-color: #AAFF99;
 }
 
+.post.temporary {
+    border: 1px solid #000000;
+}
+
 .omittedPosts.hiddenPosts {
     display: none;
 }
