--- a/src/lib/static/css/neutron.css
+++ b/src/lib/static/css/neutron.css
@@ -565,6 +565,10 @@ span.newPostCount {
     background-color: #004A58;
 }
 
+.post.temporary {
+    border: 1px solid #000000;
+}
+
 .omittedPosts.hiddenPosts {
     display: none;
 }
