--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -558,6 +558,10 @@ span.newPostCount {
     background-color: #EEDACB;
 }
 
+.post.temporary {
+    border: 1px solid #000000;
+}
+
 .omittedPosts.hiddenPosts {
     display: none;
 }
