--- a/src/lib/static/css/burichan.css
+++ b/src/lib/static/css/burichan.css
@@ -855,4 +855,10 @@ a.progressBlocking {
     width: 600px;
 }
 
+#recaptcha_image_cell {
+    background-color: inherit;
+}
 
+#recaptcha_response_field {
+    background-color: inherit;
+}
