--- a/src/lib/static/css/neutron.css
+++ b/src/lib/static/css/neutron.css
@@ -987,3 +987,15 @@ a.progressBlocking {
 .track > audio {
     width: 600px;
 }
+
+#recaptcha_response_field {
+    color: #698CC0;
+}
+
+#recaptcha_image_cell {
+    background-color: inherit;
+}
+
+#recaptcha_response_field {
+    background-color: inherit;
+}
