Add post shrinking settings option

--- a/src/lib/static/css/neutron.css
+++ b/src/lib/static/css/neutron.css
@@ -1003,3 +1003,7 @@ a.progressBlocking {
 #recaptcha_response_field {
     background-color: inherit;
 }
+
+.shrinkedPost {
+    display: table;
+}
