--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -1000,3 +1000,7 @@ a.progressBlocking {
 #recaptcha_response_field {
     background-color: inherit;
 }
+
+.shrinkedPost {
+    display: table;
+}
