--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -724,35 +724,55 @@
                     </td>
                     <td class="postformMarkup">
                         <span>
-                            <button class="button" onclick="lord.markup('b'); return false;" name="markupBold"
-                                    title="<%= markupBold %>"><b>B</b></button>
-                            <button class="button" onclick="lord.markup('i'); return false;" name="markupItalics"
-                                    title="<%= markupItalics %>"><i>i</i></button>
-                            <button class="button" onclick="lord.markup('s'); return false;" name="markupStrikedOut"
-                                    title="<%= markupStrikedOut %>"><s>S</s></button>
-                            <button class="button" onclick="lord.markup('u'); return false;" name="markupUnderlined"
-                                    title="<%= markupUnderlined %>"><u>U</u></button>
-                            <button class="button" onclick="lord.markup('spoiler'); return false;" name="markupSpoiler"
-                                    title="<%= markupSpoiler %>"><span class="spoiler">------</span></button>
-                            <button class="button" onclick="lord.markup('>'); return false;" name="markupQuotation"
-                                    title="<%= markupQuotation %>"><span class="quoatation">&gt;</span></button>
-                            <select name="langSelect" class="select" title="<%= markupLang %>"
-                                    onchange="lord.changeLastCodeLang();">
-                                <option value="-" selected="true">-----</option>
-                                <% foreach lang in availableLangs %>
-                                    <% item %>
-                                        <option value="<%= lang.id %>"><%= lang.name %></option>
+                            <% if ( content.markupElements & AbstractBoard::BoldMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('b'); return false;" name="markupBold"
+                                        title="<%= markupBold %>"><b>B</b></button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::ItalicsMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('i'); return false;" name="markupItalics"
+                                        title="<%= markupItalics %>"><i>i</i></button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::StrikedOutMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('s'); return false;" name="markupStrikedOut"
+                                        title="<%= markupStrikedOut %>"><s>S</s></button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::UnderlinedMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('u'); return false;" name="markupUnderlined"
+                                        title="<%= markupUnderlined %>"><u>U</u></button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::SpoilerMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('spoiler'); return false;" name="markupSpoiler"
+                                        title="<%= markupSpoiler %>"><span class="spoiler">------</span></button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::QuotationMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('>'); return false;" name="markupQuotation"
+                                        title="<%= markupQuotation %>"><span class="quoatation">&gt;</span></button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::CodeMarkupElement ) %>
+                                <select name="langSelect" class="select" title="<%= markupLang %>"
+                                        onchange="lord.changeLastCodeLang();">
+                                    <option value="-" selected="true">-----</option>
+                                    <% foreach lang in availableLangs %>
+                                        <% item %>
+                                            <option value="<%= lang.id %>"><%= lang.name %></option>
+                                        <% end %>
                                     <% end %>
-                                <% end %>
-                            </select>
-                            <button class="button" onclick="lord.markup('code'); return false;" name="markupCode"
-                                    title="<%= markupCode %>">[code]</button>
-                            <button class="button" onclick="lord.markup('sub'); return false;" name="markupSubscript"
-                                    title="<%= markupSubscript %>">H<sub>2</sub>O</button>
-                            <button class="button" onclick="lord.markup('sup'); return false;" name="markupSuperscript"
-                                    title="<%= markupSuperscript %>">X<sup>3</sup></button>
-                            <button class="button" onclick="lord.markup('url'); return false;" name="markupUrl"
-                                    title="<%= markupUrl %>">http://</button>
+                                </select>
+                                <button class="button" onclick="lord.markup('code'); return false;" name="markupCode"
+                                        title="<%= markupCode %>">[code]</button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::SubscriptMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('sub'); return false;" name="markupSubscript"
+                                        title="<%= markupSubscript %>">H<sub>2</sub>O</button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::SuperscriptMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('sup'); return false;" name="markupSuperscript"
+                                        title="<%= markupSuperscript %>">X<sup>3</sup></button>
+                            <% end %>
+                            <% if ( content.markupElements & AbstractBoard::UrlMarkupElement ) %>
+                                <button class="button" onclick="lord.markup('url'); return false;" name="markupUrl"
+                                        title="<%= markupUrl %>">http://</button>
+                            <% end %>
                         </span>
                     </td>
                 </tr>
