--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -203,19 +203,13 @@
                                 <% end %>
                             <% end %>
                         </select>
-                        <%= postShrinkingLabelText %>
-                        <% if ( content.shrinkPosts ) %>
-                            <input type="checkbox" name="shrinkPosts" value="true" checked="true" />
-                        <% else %>
-                            <input type="checkbox" name="shrinkPosts" value="true" />
-                        <% end %>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <%= styleLabelText %>
                     </td>
-                    <td>
+                    <td class="nowrap">
                         <select name="styleChangeSelect" class="select">
                             <% foreach st in styles %>
                                 <% item %>
@@ -229,6 +223,12 @@
                                 <% end %>
                             <% end %>
                         </select>
+                        <%= postShrinkingLabelText %>
+                        <% if ( content.shrinkPosts ) %>
+                            <input type="checkbox" name="shrinkPosts" value="true" checked="true" />
+                        <% else %>
+                            <input type="checkbox" name="shrinkPosts" value="true" />
+                        <% end %>
                     </td>
                 </tr>
                 <tr>
