--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -508,12 +508,15 @@
                         <a name="addToFavoritesButton">
                             <img src="/<%= sitePathPrefix %>img/favorite.png" title="<%= addThreadToFavoritesText %>" /></a>
                     <% end %>
+                    <a name="rawTextButton"
+                       href="javascript:lord.getRawPostText('<%= currentBoard.name %>', <%= post.number %>);">
+                        <img src="/<%= sitePathPrefix %>img/raw_text.png" title="<%= rawPostTextText %>" /></a>
                     <a name="complainButton" href="javascript:lord.complain();">
                         <img src="/<%= sitePathPrefix %>img/complain.png" title="<%= complainText %>" /></a>
                 <% end %>
                 <% if ( content.mode.name != "ascetic" ) %>
                     <a name="deleteButton"
-                       href="javascript:lord.deletePost('<%= currentBoard.name %>', '<%= post.number %>', true);">
+                       href="javascript:lord.deletePost('<%= currentBoard.name %>', <%= post.number %>, true);">
                         <% if ( post.number == post.threadNumber ) %>
                             <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deleteThreadText %>" /></a>
                         <% else %>
@@ -1066,6 +1069,7 @@
 <input type="hidden" id="delallButtonText" value="<%= delallButtonText %>" />
 <input type="hidden" id="hideByImageText" value="<%= hideByImageText %>" />
 <input type="hidden" id="shrinkPosts" value="<%= shrinkPosts %>" />
+<input type="hidden" id="rawPostTextText" value="<%= rawPostTextText %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <% foreach board in availableBoards %>
         <% item %>
@@ -1147,6 +1151,9 @@
                     <img src="/<%= sitePathPrefix %>img/download.png" title="<%= downloadThreadText %>" /></a>
                 <a name="addToFavoritesButton">
                     <img src="/<%= sitePathPrefix %>img/favorite.png" title="<%= addThreadToFavoritesText %>" /></a>
+                <a name="rawTextButton"
+                   href="javascript:lord.getRawPostText('<%= currentBoard.name %>', %postNumber%);">
+                    <img src="/<%= sitePathPrefix %>img/raw_text.png" title="<%= rawPostTextText %>" /></a>
                 <a href="javascript:lord.complain();">
                     <img src="/<%= sitePathPrefix %>img/complain.png" title="<%= complainText %>" /></a>
                 <a name="deleteButton"
